--- a/Match3/Match3.vcxproj.filters
+++ b/Match3/Match3.vcxproj.filters
@@ -4,10 +4,22 @@
     <Filter Include="ECS">
       <UniqueIdentifier>{60E1870B-CCEA-877C-5566-9E7CC16E937C}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ECS\Components">
+      <UniqueIdentifier>{752AA906-61F8-9C0C-4A8C-0D3336F97871}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ECS\Systems">
+      <UniqueIdentifier>{67975D28-D34C-D61D-5C41-D0F4C8F5CC21}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\ECS\Component.h">
       <Filter>ECS</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ECS\Components\Position.h">
+      <Filter>ECS\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ECS\Components\Sprite.h">
+      <Filter>ECS\Components</Filter>
     </ClInclude>
     <ClInclude Include="src\ECS\Entity.h">
       <Filter>ECS</Filter>
@@ -15,23 +27,27 @@
     <ClInclude Include="src\ECS\System.h">
       <Filter>ECS</Filter>
     </ClInclude>
+    <ClInclude Include="src\ECS\SystemManager.h">
+      <Filter>ECS</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ECS\Systems\RenderSystem.h">
+      <Filter>ECS\Systems</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ECS\Systems\TileSystem.h">
+      <Filter>ECS\Systems</Filter>
+    </ClInclude>
     <ClInclude Include="src\Game.h" />
+    <ClInclude Include="src\Input.h" />
     <ClInclude Include="src\Log.h" />
     <ClInclude Include="src\TextureManager.h" />
     <ClInclude Include="src\pch.h" />
-    <ClInclude Include="src\ECS\Components\Position.h" />
-    <ClInclude Include="src\ECS\Components\Sprite.h" />
-    <ClInclude Include="src\ECS\Systems\RenderSystem.h" />
-    <ClInclude Include="src\Input.h" />
-    <ClInclude Include="src\ECS\SystemManager.h" />
-    <ClInclude Include="src\ECS\Systems\TileSystem.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Game.cpp" />
+    <ClCompile Include="src\Input.cpp" />
     <ClCompile Include="src\Log.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\TextureManager.cpp" />
     <ClCompile Include="src\pch.cpp" />
-    <ClCompile Include="src\Input.cpp" />
   </ItemGroup>
 </Project>
